@@ -1,4 +1,8 @@
-﻿drkns 21.12.2015 08:13:52 +0200 - build 4489
+﻿drkns 21.12.2015 20:25:07 +0200 - build 4490
+
+1. Рефакторинг, продолжение 4484.
+
+drkns 21.12.2015 08:13:52 +0200 - build 4489
 
 1. И ещё.
 
